“ME_API_TESTING_PROJECT_MODULE_API_TESTING”

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ repositories {
 dependencies {
     // Use TestNG framework, also requires calling test.useTestNG() below
         implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.0.0'
-    testImplementation group: 'org.testng', name: 'testng', version: '7.6.0'
+        testImplementation group: 'org.testng', name: 'testng', version: '7.6.0'
 
     // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
     // NOTE: Added to remove the "ERROR StatusLogger Log4j2 could not find a logging implementation. Please add log4j-core to the classpath. Using SimpleLogger to log to the console..." error shown
@@ -50,6 +50,7 @@ application {
 
 test {
     useTestNG() {
+        suites 'src/test/java/qtriptest/APITests/testng.xml'
         useDefaultListeners = true // generates the test report
     }
      afterSuite { desc, result ->
